@@ -4,6 +4,7 @@ Revision history for Scene-Graph
     - Add MooseX::Storage roles
     - Make the Node a Forest::Tree (and document methods)
     - Add find method to Node
+    - Add clear_children
 
 0.01    Date/time
         First version, released on an unsuspecting world.
